# requestx-discord-client

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Config.toml  Config.toml.template  Config_test.toml  Dockerfile  cloudbuild.yaml  docker-compose.yml  log4rs.yml
src/: main.rs
src/commands/: mod.rs  request_level.rs  review.rs  reviewer.rs  send_level.rs
src/config/: auth_config.rs  client_config.rs  common_config.rs  constants.rs  mod.rs  requestx_api_config.rs
src/model/: level_request.rs  level_review.rs  level_type.rs  mod.rs  moderator.rs  request_score.rs  reviewer.rs
src/model/error/: auth_error.rs  level_request_error.rs  mod.rs
src/model/requestx_api/: level_request_data.rs  level_review_data.rs  level_review_error.rs  mod.rs  moderator_data.rs  requestx_api_client.rs  reviewer_data.rs
src/model/serde/: serializer.rs
src/model/serenity/: mod.rs  request_rating_choice.rs
src/serenity/: command_interaction_handler.rs  common.rs  mod.rs
src/service/: auth_service.rs  level_request_service.rs  level_review_service.rs  mod.rs  moderator_service.rs  reviewer_service.rs
src/util/: discord.rs
