[package]
name = "requestx-discord-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1-rc1"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
dotenv = "0.15.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.111"
toml = "0.8.8"
lazy_static = "1.4.0"
reqwest = "0.11.23"
chrono = "0.4.31"
url = "2.5.0"
async-trait = "0.1.77"

[dev-dependencies]
httpmock = {version = "0.7.0-rc.1", features = ["remote"]}
tokio-test = "0.4.3"